# openmythos-pg

./: .gitignore  README.md  pyproject.toml
configs/: model_200m.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: prepare_data.py  run_generate.py  run_train.py
src/openmythos_pg/: __init__.py  data.py  generate.py  logging_utils.py  train.py
tests/: test_data.py  test_logging_utils.py  test_model_config.py
