[project]
name = "openmythos-pg"
version = "0.1.0"
description = "OpenMythos playground (~200M, Japanese Wikipedia)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "open-mythos==0.5.0",
  "transformers>=4.40.0",
  "datasets>=2.18.0",
  "tokenizers>=0.15.0",
  "sentencepiece",
  "protobuf",
  "numpy<2.0",
  "rich",
  "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmythos_pg"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
